--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -674,6 +674,7 @@ h6,
 }
 #ext_menu-0 .navbar-caption {
   color: #ffffff;
+  font-size: 12px;
 }
 #ext_menu-0 .navbar-toggler {
   color: #ffffff;
@@ -687,11 +688,11 @@ h6,
   color: #ffffff;
 }
 #ext_menu-0 .link {
-  font-size: 0.75rem;
+  font-size: 0.6rem;
 }
 #ext_menu-0 .dropdown-item,
 #ext_menu-0 .nav-dropdown-sm .link {
-  font-size: 0.812rem;
+  font-size: 0.650rem;
 }
 #ext_menu-0 .link:hover,
 #ext_menu-0 .dropdown-item:hover,
@@ -729,6 +730,9 @@ h6,
 #ext_menu-0 .link[aria-expanded="true"],
 #ext_menu-0 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
+}
+#ext_menu-0 A {
+  font-size: 9px;
 }
 #header3-6 .mbr-section-title,
 #header3-6 .mbr-section-subtitle {
