--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -75,7 +75,7 @@ h6,
   font-family: 'Lora', serif;
 }
 .bg-primary {
-  background-color: #c0a375 !important;
+  background-color: #fac51c !important;
 }
 .bg-success {
   background-color: #90a878 !important;
@@ -90,8 +90,8 @@ h6,
   background-color: #f28281 !important;
 }
 .btn-primary {
-  background-color: #c0a375;
-  border-color: #c0a375;
+  background-color: #fac51c;
+  border-color: #fac51c;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -100,14 +100,14 @@ h6,
 .btn-primary:active,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #a07e49;
-  border-color: #a07e49;
+  background-color: #c59704;
+  border-color: #c59704;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #a07e49 !important;
-  border-color: #a07e49 !important;
+  background-color: #c59704 !important;
+  border-color: #c59704 !important;
 }
 .btn-secondary {
   background-color: #bfcecb;
@@ -211,8 +211,8 @@ h6,
 }
 .btn-primary-outline {
   background: none;
-  border-color: #8e7041;
-  color: #8e7041;
+  border-color: #ac8404;
+  color: #ac8404;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
@@ -220,14 +220,14 @@ h6,
 .btn-primary-outline:active,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #c0a375;
-  border-color: #c0a375;
+  background-color: #fac51c;
+  border-color: #fac51c;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #c0a375 !important;
-  border-color: #c0a375 !important;
+  background-color: #fac51c !important;
+  border-color: #fac51c !important;
 }
 .btn-secondary-outline {
   background: none;
@@ -330,7 +330,7 @@ h6,
   border-color: #f28281 !important;
 }
 .text-primary {
-  color: #c0a375 !important;
+  color: #fac51c !important;
 }
 .text-success {
   color: #90a878 !important;
@@ -357,36 +357,36 @@ h6,
   background-color: #f28281;
 }
 .btn-social {
-  border-color: #c0a375;
+  border-color: #fac51c;
 }
 .btn-social:hover {
-  background: #c0a375;
+  background: #fac51c;
 }
 .mbr-company .list-group-item.active .list-group-text {
-  color: #c0a375;
+  color: #fac51c;
 }
 .mbr-footer p a,
 .mbr-footer ul a {
-  color: #c0a375;
+  color: #fac51c;
 }
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #c0a375;
+  background: #fac51c;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #c0a375;
+  color: #fac51c;
 }
 .lead a,
 .lead a:hover {
-  color: #c0a375;
+  color: #fac51c;
 }
 .lead blockquote {
-  border-color: #c0a375;
+  border-color: #fac51c;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #e8ddcd;
+  color: #fef8e4;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -406,7 +406,7 @@ h6,
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
-  color: #c0a375;
+  color: #fac51c;
 }
 .scrollToTop_wraper {
   display: none;
@@ -440,7 +440,7 @@ h6,
   font-family: 'Lora', serif;
 }
 .mbr-iconfont-counters1 {
-  color: #c0a375;
+  color: #fac51c;
 }
 .extHeader1 .container h3,
 .extHeader2 .container h3,
@@ -518,7 +518,7 @@ h6,
   font-family: 'Montserrat', sans-serif;
 }
 .extFeatures3 .border-wrap {
-  border-color: #c0a375;
+  border-color: #fac51c;
 }
 .extFeatures4 h4,
 .extFeatures6 h4,
@@ -549,13 +549,13 @@ h6,
   font-family: 'Lora', serif;
 }
 .extPricingTable1 .bottom_line {
-  border-bottom-color: #c0a375;
+  border-bottom-color: #fac51c;
 }
 .extPricingTable1 .mbr-price small {
   font-family: 'Lora', serif;
 }
 .extPricingTable1 .mbr-plan-label {
-  background: #c0a375;
+  background: #fac51c;
 }
 .extCounters2 h4 {
   font-family: 'Montserrat', sans-serif;
@@ -573,14 +573,14 @@ h6,
   font-family: 'Lora', serif;
 }
 .extProgressBar .progress-primary[value]::-webkit-progress-value {
-  background-color: #c0a375;
+  background-color: #fac51c;
 }
 .extProgressBar .progress-primary[value]::-moz-progress-bar {
-  background-color: #c0a375;
+  background-color: #fac51c;
 }
 @media screen and (min-width: 0\0) {
   .extProgressBar .progress-primary .progress-bar {
-    background-color: #c0a375;
+    background-color: #fac51c;
   }
 }
 .extProgressBar .title-wrap {
@@ -597,7 +597,7 @@ h6,
 }
 .extTabs1 ul.nav-tabs li a:hover,
 .extTabs2 ul.nav-tabs li a:hover {
-  color: #c0a375;
+  color: #fac51c;
 }
 .extAccordion1 .panel-heading a {
   font-family: 'Raleway', sans-serif;
@@ -611,7 +611,7 @@ h6,
 .extAccordion1 .pseudoMinus,
 .extAccordion2 .pseudoMinus,
 .extToggle1 .pseudoMinus {
-  background-color: #c0a375;
+  background-color: #fac51c;
 }
 .extAccordion2 .panel-heading a,
 .extAccordion3 .panel-heading a,
@@ -619,14 +619,14 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 .extProgressBar5 .progress-primary[value]::-webkit-progress-value {
-  background-color: #c0a375;
+  background-color: #fac51c;
 }
 .extProgressBar5 .progress-primary[value]::-moz-progress-bar {
-  background-color: #c0a375;
+  background-color: #fac51c;
 }
 @media screen and (min-width: 0\0) {
   .extProgressBar5 .progress-primary .progress-bar {
-    background-color: #c0a375;
+    background-color: #fac51c;
   }
 }
 .extProgressBar5 .title-wrap {
@@ -658,16 +658,16 @@ h6,
   font-family: 'Montserrat', sans-serif;
 }
 .extMenu1 span.icon a:hover {
-  color: #c0a375 !important;
+  color: #fac51c !important;
 }
 .extProgressBar .progress-primary[value]::-ms-fill {
-  color: #c0a375;
+  color: #fac51c;
 }
 .extProgressBar5 .progress-primary[value]::-ms-fill {
-  color: #c0a375;
+  color: #fac51c;
 }
 .theme-border {
-  border: 1px solid #c0a375;
+  border: 1px solid #fac51c;
 }
 #ext_menu-9 .hide-buttons .nav-btn {
   display: none !important;
@@ -698,7 +698,7 @@ h6,
 #ext_menu-9 .dropdown-item:hover,
 #ext_menu-9 .link:focus,
 #ext_menu-9 .dropdown-item:focus {
-  color: #c0a375;
+  color: #fac51c;
 }
 #ext_menu-9 .link[aria-expanded="true"],
 #ext_menu-9 .dropdown-menu {
@@ -725,11 +725,11 @@ h6,
 }
 #ext_menu-9 .bg-color.transparent.opened .link:hover,
 #ext_menu-9 .bg-color.transparent.opened .link:focus {
-  color: #c0a375;
+  color: #fac51c;
 }
 #ext_menu-9 .link[aria-expanded="true"],
 #ext_menu-9 .dropdown-item[aria-expanded="true"] {
-  color: #c0a375 !important;
+  color: #fac51c !important;
 }
 #ext_menu-9 A {
   font-size: 9px;
@@ -740,4 +740,14 @@ h6,
 }
 #msg-box8-8 .mbr-section-title {
   font-size: 36px;
+}
+#msg-box8-8 .lead P {
+  color: #fac51c;
+  font-size: 19px;
+}
+#header6-a .mbr-section-title {
+  color: #28262b;
+}
+#header6-a .mbr-section-text {
+  color: #565656;
 }
