--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -408,9 +408,6 @@ h6,
 .mbr-gallery-filter li:hover {
   color: #fac51c;
 }
-.scrollToTop_wraper {
-  display: none;
-}
 .extCountdown1 .number,
 .extCountdown2 .number {
   font-family: 'Montserrat', sans-serif;
@@ -669,70 +666,67 @@ h6,
 .theme-border {
   border: 1px solid #fac51c;
 }
-#ext_menu-9 .hide-buttons .nav-btn {
+#menu-c .hide-buttons .nav-btn {
   display: none !important;
 }
-#ext_menu-9 .navbar-caption {
+#menu-c .navbar-caption {
   color: #ffffff;
-  font-size: 12px;
+  font-size: 14px;
 }
-#ext_menu-9 .navbar-toggler {
+#menu-c .navbar-toggler {
   color: #ffffff;
 }
-#ext_menu-9 .close-icon::before,
-#ext_menu-9 .close-icon::after {
+#menu-c .close-icon::before,
+#menu-c .close-icon::after {
   background-color: #ffffff;
 }
-#ext_menu-9 .link,
-#ext_menu-9 .dropdown-item {
+#menu-c .link,
+#menu-c .dropdown-item {
   color: #ffffff;
 }
-#ext_menu-9 .link {
-  font-size: 0.6rem;
+#menu-c .link {
+  font-size: 0.75rem;
 }
-#ext_menu-9 .dropdown-item,
-#ext_menu-9 .nav-dropdown-sm .link {
-  font-size: 0.650rem;
+#menu-c .dropdown-item,
+#menu-c .nav-dropdown-sm .link {
+  font-size: 0.812rem;
 }
-#ext_menu-9 .link:hover,
-#ext_menu-9 .dropdown-item:hover,
-#ext_menu-9 .link:focus,
-#ext_menu-9 .dropdown-item:focus {
+#menu-c .link:hover,
+#menu-c .dropdown-item:hover,
+#menu-c .link:focus,
+#menu-c .dropdown-item:focus {
   color: #fac51c;
 }
-#ext_menu-9 .link[aria-expanded="true"],
-#ext_menu-9 .dropdown-menu {
-  background: #1b044f;
+#menu-c .link[aria-expanded="true"],
+#menu-c .dropdown-menu {
+  background: #081b4e;
 }
-#ext_menu-9 .nav-dropdown-sm .link:focus,
-#ext_menu-9 .nav-dropdown-sm .link:hover,
-#ext_menu-9 .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-9 .nav-dropdown-sm .dropdown-item:hover {
-  background: #260571!important;
+#menu-c .nav-dropdown-sm .link:focus,
+#menu-c .nav-dropdown-sm .link:hover,
+#menu-c .nav-dropdown-sm .dropdown-item:focus,
+#menu-c .nav-dropdown-sm .dropdown-item:hover {
+  background: #0b276e!important;
 }
-#ext_menu-9 .navbar,
-#ext_menu-9 .nav-dropdown-sm,
-#ext_menu-9 .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-9 .nav-dropdown-sm .dropdown-menu {
-  background: #2b0680;
+#menu-c .navbar,
+#menu-c .nav-dropdown-sm,
+#menu-c .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-c .nav-dropdown-sm .dropdown-menu {
+  background: #0c2c7c;
 }
-#ext_menu-9 .bg-color.transparent .link {
+#menu-c .bg-color.transparent .link {
   color: #ffffff;
   transition: none;
 }
-#ext_menu-9 .bg-color.transparent.opened .link {
+#menu-c .bg-color.transparent.opened .link {
   transition: color 0.2s ease-in-out;
 }
-#ext_menu-9 .bg-color.transparent.opened .link:hover,
-#ext_menu-9 .bg-color.transparent.opened .link:focus {
+#menu-c .bg-color.transparent.opened .link:hover,
+#menu-c .bg-color.transparent.opened .link:focus {
   color: #fac51c;
 }
-#ext_menu-9 .link[aria-expanded="true"],
-#ext_menu-9 .dropdown-item[aria-expanded="true"] {
-  color: #fac51c !important;
-}
-#ext_menu-9 A {
-  font-size: 9px;
+#menu-c .link[aria-expanded="true"],
+#menu-c .dropdown-item[aria-expanded="true"] {
+  color: #fac51c!important;
 }
 #header1-b .mbr-section-title {
   font-size: 32px;
