--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -821,6 +821,13 @@ h6,
 #menu-h .dropdown-item[aria-expanded="true"] {
   color: #fac51c!important;
 }
+#msg-box8-o .mbr-section-title,
+#msg-box8-o p {
+  color: #fff;
+}
+#msg-box8-o .mbr-section-title {
+  font-size: 32px;
+}
 #msg-box5-j H3 {
   font-size: 32px;
 }
