create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1187,6 +1187,12 @@ h6,
   background-color: #0b0fb4;
   border-color: #0b0fb4;
 }
+#features7-2j H4 {
+  color: #ffffff;
+}
+#features7-2j P {
+  color: #ffffff;
+}
 #msg-box8-25 .mbr-section-title,
 #msg-box8-25 p {
   color: #fff;
