--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -730,9 +730,12 @@ h6,
 #ext_menu-3 A {
   font-size: 14px;
 }
-#extHeader12-2r H3 {
-  text-align: left;
-  font-size: 36px;
+#header1-2v .mbr-section-title {
+  font-size: 32px;
+  color: #ffffff;
+}
+#header1-2v .mbr-section-lead {
+  color: #ffffff;
 }
 #msg-box8-2p .mbr-section-title,
 #msg-box8-2p p {
@@ -1299,4 +1302,86 @@ h6,
 }
 #social-buttons4-2d .mbr-section-title {
   font-size: 24px;
+}
+#ext_menu-2w .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2w .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2w .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-2w .close-icon::before,
+#ext_menu-2w .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-2w .link,
+#ext_menu-2w .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-2w .link {
+  font-size: 0.6rem;
+}
+#ext_menu-2w .dropdown-item,
+#ext_menu-2w .nav-dropdown-sm .link {
+  font-size: 0.650rem;
+}
+#ext_menu-2w .link:hover,
+#ext_menu-2w .dropdown-item:hover,
+#ext_menu-2w .link:focus,
+#ext_menu-2w .dropdown-item:focus {
+  color: #f7da64;
+}
+#ext_menu-2w .link[aria-expanded="true"],
+#ext_menu-2w .dropdown-menu {
+  background: #080b84;
+}
+#ext_menu-2w .nav-dropdown-sm .link:focus,
+#ext_menu-2w .nav-dropdown-sm .link:hover,
+#ext_menu-2w .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2w .nav-dropdown-sm .dropdown-item:hover {
+  background: #0a0ea6!important;
+}
+#ext_menu-2w .navbar,
+#ext_menu-2w .nav-dropdown-sm,
+#ext_menu-2w .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2w .nav-dropdown-sm .dropdown-menu {
+  background: #0b0fb4;
+}
+#ext_menu-2w .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-2w .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2w .bg-color.transparent.opened .link:hover,
+#ext_menu-2w .bg-color.transparent.opened .link:focus {
+  color: #f7da64;
+}
+#ext_menu-2w .link[aria-expanded="true"],
+#ext_menu-2w .dropdown-item[aria-expanded="true"] {
+  color: #f7da64!important;
+}
+#ext_menu-2w A {
+  font-size: 14px;
+}
+#msg-box8-31 .mbr-section-title,
+#msg-box8-31 p {
+  color: #fff;
+}
+#msg-box5-2z P {
+  text-align: left;
+}
+#msg-box5-2z H3 {
+  font-size: 36px;
+  text-align: left;
+}
+#social-buttons4-30 .mbr-section-title,
+#social-buttons4-30 .btn-social {
+  color: #fff;
+}
+#social-buttons4-30 .mbr-section-title {
+  font-size: 36px;
 }
